<?xml version="1.0"?>
<package>
  <name>rosjava_extras</name>
  <version>0.3.3</version>
  <description>
    Extra packages for rosjava_core
  </description>
  <url type="website">http://ros.org/wiki/rosjava_extras</url>
  <url type="repository">https://github.com/rosjava/rosjava_extras</url>
  <url type="bugtracker">https://github.com/rosjava/rosjava_extras/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author email="damonkohler@google.com">Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rosjava_core</run_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>

